# csie_project_ws

./: .gitignore  MongoDB_connect.py  README.md  ROS2指令.txt  RPi_GPIO.py  RobotControl.vue  Thermal.html  arduino.html  camera.py  connection.html  fire_patrol.py  fire_thermal.py  i2c_bus.py  index.html  map.html  mraa_GPIO.py  my_robot.html  my_robot_new.html  my_robot_ps5.html  patrol.py  ros2_slam.html  servo_control.py  thermal_camera.py  web_video_server_qos.yaml  專題架構圖.drawio  導航節點.py
app_project/: app.py  app2.py  server.py  start_web_map.sh
app_project/static/: style.css
app_project/templates/: index.html  ros2_map.html
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_msgs/lib/: libturtlebot3_msgs__rosidl_generator_c.dylib  libturtlebot3_msgs__rosidl_generator_py.dylib  libturtlebot3_msgs__rosidl_typesupport_c.dylib  (+3 more)
log/: latest_build
src/my_robot_car/: CMakeLists.txt  package.xml  setup.py
src/my_robot_car/config/: control.yaml
src/my_robot_car/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_car/install/my_robot_car/lib/my_robot_car/: ball_detector.py  launcher_controller.py
src/my_robot_car/install/my_robot_car/share/ament_index/resource_index/parent_prefix_path/: my_robot_car
src/my_robot_car/install/my_robot_car/share/my_robot_car/: local_setup.dsv  package.bash  package.sh  package.zsh
src/my_robot_car/install/my_robot_car/share/my_robot_car/cmake/: my_robot_carConfig.cmake
src/my_robot_car/install/my_robot_car/share/my_robot_car/launch/: gazebo.launch.py
src/my_robot_car/launch/: gazebo.launch.py  map_server.launch.py
src/my_robot_car/log/: latest_build
src/my_robot_car/scripts/: ball_detector.py  fire_detection_control_node.py  fire_detector.py  fire_detector_1.py  fire_detector_2.py  fire_sample.py  fire_tracking_node.py  flame_tracker.py  patrol_node.py
src/my_robot_car/urdf/: my_robot_car.urdf
src/my_robot_car/worlds/: fire_detection_world.world
templates/: index.html
(+45 files in other folders)
